# Communicator

./: .gitignore  .gitmodules  README.md  client.cpp  server.cpp
client/: index.html  styles.css
server/: CMakeLists.txt  client.cpp  server.cpp
server/usersData/: messages.json  usersInfo.json
